# Blue-Paranoia-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
engine/: Application.hpp  BPE.cpp  CMakeLists.txt
engine/Core/: GameLoop.hpp  Metadata.hpp
engine/Core/App/: Event.cpp  Event.hpp  GameLoop.cpp  GameLoop.hpp  Init.cpp  Init.hpp  Iterate.cpp  Iterate.hpp  Quit.cpp  Quit.hpp
libraries/: QuickReference.txt
src/: main.cpp
src/engine/: CMakeLists.txt
